# dvc-demo

./: dvc.yaml  pyproject.toml
.dvc/: config
